2004-06-11  Ben Elliston  <bje@gnu.org>

	* config.guess (pegasos:OpenBSD:*:*): Remove.

2004-06-11  Ben Elliston  <bje@gnu.org>

	From Wouter Verhelst <wouter@grep.be>:
	* config.guess (M68*:*:R3V[5678]:*): Detect R3V8.

2004-06-11  Ben Elliston  <bje@gnu.org>

	* config.guess (luna88k:OpenBSD:*:*): New.

2004-03-12  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>

	* config.guess (m32r*:Linux:*:*): New case.
	* config.sub: Handle m32rle.

2004-03-12  Ben Elliston  <bje@wasabisystems.com>

	From Jens Petersen  <petersen@redhat.com>:
	* config.sub: Handle sparcv8.

2004-03-03  Ben Elliston  <bje@wasabisystems.com>

	From Tom Smith <smith@cag.lkg.hp.com>:
	* config.guess: Version suffixes are equally significant on Tru64
	V4.* and V5.*, so do not ignore them on V5.*.  Handle a version
	prefix of "P" (patched kernel).

2004-02-23  Tal Agmon  <Tal.Agmon@nsc.com>

	* config.sub: Add support for National Semiconductor CRX target.

2004-02-16  Thorsten Glaser  <x86@ePost.de>

	* config.guess (*:MirBSD:*:*, macppc:MirBSD:*:*): Handle.
	* config.sub: Handle -mirbsd*.

2004-02-16  Brad Smith  <brad@comstyle.com>

	* config.guess: Recognize OpenBSD on AMD64 and CATS hardware.

2004-02-11  Ben Elliston  <bje@wasabisystems.com>

	* config.sub (abacus): Add.

2004-02-11  Galit Heller  <Galit.Heller@nsc.com>

	* config.sub: Add support for National Semiconductor CR16C target.

2004-02-02  Ben Elliston  <bje@wasabisystems.com>

	* config.guess (*:ekkoBSD:*:*): Handle.
	* config.guess: Handle -ekkobsd*.

2004-01-30  Ben Elliston  <bje@wasabisystems.com>

	* NEWS: Remove.

2004-01-24  Ben Elliston  <bje@wasabisystems.com>

	From Brett E. Wynkoop <wynkoop@wynn.com>:
	* config.guess (m68k:machten:*:*): Handle.

2004-01-20  Jeroen Ruigrok van der Werven  <asmodai@dragonflybsd.org>

	* config.guess: Fix DragonFly entry to really work.

2004-01-05  Ben Elliston  <bje@wasabisystems.com>
	    Joachim Schmitz  <schmitz@hp.com>

	* config.guess: Handle NSR-? to accept any CPU type.
